newclay/test/Compiler/Propagation/Fail/InitializeTypeMismatch/main.clay
main() {
    var x = 1i32;
    x <-- 2;
}
